    \itemize{
      \item Implement the generalized extreme value
      distribution via family \code{gen_extreme_value}.
      \item Improve flexibility of the \code{horseshoe}
      prior thanks to Juho Piironen.
      \item Introduce auxiliary parameter \code{mu}
      as an alternative to specifying effects within
      the \code{formula} argument in function
      \code{brmsformula}.
    }
  }
  \subsection{OTHER CHANGES}{
    \itemize{
      \item Refactor various parts of the package
      to ease implementation of mixture and multivariate
      models in future updates. This should not have
      any user visible effects.
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item Fix a rare error when predicting \code{von_mises}
      models thanks to John Kirwan.
    }
  }
}

\section{CHANGES IN VERSION 1.4.0}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item Fit quantile regression models via family
      \code{asym_laplace} (asymmetric Laplace distribution).
      \item Specify non-linear models in a (hopefully) more
      intuitive way using \code{brmsformula}.
      \item Fix auxiliary parameters to certain values
      through \code{brmsformula}.
      \item Allow \code{family} to be specified in
      \code{brmsformula}.
      \item Introduce family \code{frechet} for modelling
      strictly positive responses.
      \item Allow truncation and censoring at the same time.
      \item Introduce function \code{prior_} allowing
      to specify priors using one-sided formulas or \code{quote}.
      \item Pass priors to \pkg{Stan} directly without
      performing any checks by setting \code{check = FALSE} 
      in \code{set_prior}.
      \item Introduce method \code{nsamples} to extract
      the number of posterior samples.
      \item Export the main formula parsing function 
      \code{parse_bf}.
      \item Add more options to customize two-dimensional surface
      plots created by \code{marginal_effects} or \code{marginal_smooths}.