@@ -6,8 +6,9 @@
 \usage{
 \method{fitted}{brmsfit}(object, newdata = NULL, re_formula = NULL,
   scale = c("response", "linear"), allow_new_levels = FALSE,
-  incl_autocor = TRUE, subset = NULL, nsamples = NULL, sort = FALSE,
-  summary = TRUE, robust = FALSE, probs = c(0.025, 0.975), ...)
+  incl_autocor = TRUE, auxpar = NULL, subset = NULL, nsamples = NULL,
+  sort = FALSE, summary = TRUE, robust = FALSE, probs = c(0.025, 0.975),
+  ...)
 }
 \arguments{
 \item{object}{An object of class \code{brmsfit}}
@@ -33,6 +34,9 @@ Only relevant if \code{newdata} is provided.}
 \item{incl_autocor}{A flag indicating if autocorrelation
 parameters should be included in the predictions. 
 Defaults to \code{TRUE}.}
+
+\item{auxpar}{Optional name of a predicted auxiliary parameter.
+If specified, fitted values of this parameters are returned.}
 
 \item{subset}{A numeric vector specifying
 the posterior samples to be used. 
